# api-v3

./: .gitignore  Cargo.toml  Makefile  README.md
schemas/: schema-2022-05-27~09:23:56.bak  schema.sql
src/: _toconv  appeal.rs  botactions.rs  commands.rs  converters.rs  core.rs  database.rs  docs.rs  docser.rs  ipc.rs  login.rs  main.rs  models.rs  notifs.rs  oauth2.rs  packs.rs  resources.rs  reviews.rs  security.rs  serveractions.rs  stats.rs  user.rs  votes.rs  ws.rs
