[package]
name = "fates"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.1"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
serde_repr = "0.1.7"
env_logger = "0.9.0"
log = "0.4.14"
num_enum = "0.5.6"
str_inflector = "0.12.0"
actix-cors = "0.6.0-beta.8"
redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager", "r2d2"] }
uuid = { version = "0.8.2", features = ["v4"] }
actix-rt = "2.6.0"
thiserror = "1.0.30"
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1", "serde"] }
deadpool = { version = "0.9.2", features = ["rt_tokio_1", "serde"] }
bevy_reflect = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"]}
ammonia = "3"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
maplit = "1.0.2"
tokio = "1.17.0"
async-recursion = "1.0.0"
futures = "0.3.21"
actix-service = "2.0.2"
bytes = "1.1.0"

[profile.release-lto]
inherits = "release"
strip = true  # Automatically strip symbols from the binary.
lto = "fat"
codegen-units = 1


[profile.release-fast]
inherits = "release"