[package]
name = "fates"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
actix-ws = "0.2.5"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres", "chrono", "uuid", "bigdecimal", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
serde_repr = "0.1.7"
env_logger = "0.9.0"
log = "0.4.14"
num_enum = "0.5.6"
str_inflector = "0.12.0"
actix-cors = "0.6.0"
redis = { version = "0.21.5", features = ["tokio-comp", "aio", "connection-manager", "r2d2"] }
uuid = { version = "0.8.2", features = ["v4", "serde"] }
actix-rt = "2.6.0"
thiserror = "1.0.30"
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1", "serde"] }
deadpool = { version = "0.9.2", features = ["rt_tokio_1", "serde"] }
chrono = { version = "0.4.19", features = ["serde"]}
ammonia = "3"
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
maplit = "1.0.2"
tokio = "1.17.0"
async-recursion = "1.0.0"
futures = "0.3.21"
actix-service = "2.0.2"
bytes = "1.1.0"
reqwest = { version = "0.11.9", features = ["json"] }
rand = "0.8.5"
base64 = "0.13.0"
indexmap = { version = "1.8.0", features = ["serde"] }
serenity = { version = "0.10.10", features = ["model", "http"] }
bigdecimal = { version = "0.2.2", features = ["serde"] }
procfs = { version = "0.12.0" }
sha2 = { version = "0.10.2" }
hmac = { version = "0.12.1" }
hex = "0.4.3"
strum = "0.24.0"
strum_macros = "0.24.0"
time = { version = "0.3.9", features = ["macros", "formatting", "parsing"] }
bristlefrost = { git = "https://github.com/Fates-List/bristlefrost" }
